Add .gitignore and update pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,35 @@ torch = {version = "^2.0.1+cpu", source = "pytorch"}
 torchvision = {version = "^0.15.2+cpu", source = "pytorch"}
 pandas = "^2.1.1"
 
+[[tool.poetry.source]]
+name = "pytorch"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
+
+[tool.poetry.dev-dependencies]
+pre-commit = "^3.4.0"
+
+[tool.black]
+line-length = 90
+target-version = ["py310"]
+
+[tool.isort]
+src_paths = ["mnist"]
+profile = "black"
+line_length = 90
+lines_after_imports = 2
+
+[tool.nbqa.config]
+black = "pyproject.toml"
+isort = "pyproject.toml"
+flake8 = "setup.cfg"
+
+[tool.nbqa.addopts]
+flake8 = ["--extend-ignore=E402"]
+
+[tool.nbqa.mutate]
+black = 1
+isort = 1
 
 [[tool.poetry.source]]
 name = "pytorch"
