--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.10,<3.13"
 torch = {version = "^2.0.1+cpu", source = "pytorch"}
 torchvision = {version = "^0.15.2+cpu", source = "pytorch"}
 pandas = "^2.1.1"
+hydra-core = "^1.3.2"
 
 [[tool.poetry.source]]
 name = "pytorch"
